# twilio-agent-connect-aws

./: .gitignore  .worktreeinclude  AUTHORS  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ha_tf.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/actions/artifactory-oidc/: action.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: README.md
deploy/agentcore/: .env.example  README.md
deploy/agentcore/agent/: .env.example  README.md
deploy/agentcore/agent/agentcore/: .gitignore  agentcore.json
deploy/agentcore/agent/agentcore/cdk/: package-lock.json  package.json
deploy/agentcore/agent/agentcore/cdk/lib/: cdk-stack.ts
deploy/agentcore/agent/app/agent/: main.py  pyproject.toml
deploy/agentcore/aws_lambda/: .env.example  README.md
deploy/agentcore/aws_lambda/app/: index.py  requirements.txt  validation.py
deploy/agentcore/aws_lambda/cdk/lib/: cdk-stack.ts
deploy/agentcore/twilio_function/: .env.example  README.md
deploy/agentcore/twilio_function/cdk/: package-lock.json  package.json
deploy/agentcore/twilio_function/cdk/lib/: cdk-stack.ts
deploy/agentcore/twilio_function/function/: .gitignore  README.md  deploy.sh  package.json
deploy/agentcore/twilio_function/function/functions/: handler.js  handler.protected.js
deploy/agentcore_aws_fargate/: .dockerignore  Dockerfile  README.md  agentcore_server.py  build-wheels.sh  cloudformation.yaml  requirements.txt
deploy/agentcore_aws_fargate/agent/: .gitignore  agent.py
deploy/agentcore_aws_lambda/: .env.example  Makefile  README.md  iam-policy.json
deploy/agentcore_aws_lambda/agent/: config.py  main.py  pyproject.toml  tac_app.py  tac_config.py  websocket_adapter.py
deploy/agentcore_aws_lambda/agent/agentcore/: agentcore.json
deploy/agentcore_aws_lambda/agent/agentcore/cdk/test/: cdk.test.ts
deploy/agentcore_aws_lambda/agent/app/agent/: pyproject.toml
deploy/agentcore_aws_lambda/aws_lambda/cdk/: package-lock.json  package.json
deploy/agentcore_aws_lambda/cdk/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
deploy/agentcore_aws_lambda/cdk/agentcore/: .gitignore  agentcore.json
deploy/agentcore_aws_lambda/cdk/config/: env-config.ts
deploy/agentcore_aws_lambda/cdk/lib/: agentcore-stack.ts  lambda-stack.ts  secrets-stack.ts
deploy/agentcore_aws_lambda/lambda/: credentials.py  index.py  lambda_proxy.py  proxy.py  requirements.txt  validation.py
deploy/agentcore_lambda/: .env.example  README.md
deploy/agentcore_lambda/agentcore/: agent.py  deploy.sh
deploy/agentcore_lambda/infra/: cloudformation.yaml  deploy.sh
deploy/agentcore_lambda/lambda/: cloudformation.yaml  deploy.sh
deploy/agentcore_twilio_function/: .env.example  README.md
deploy/agentcore_twilio_function/agentcore/: .bedrock_agentcore.yaml.template  deploy.sh  requirements.txt
deploy/agentcore_twilio_function/infra/: cloudformation.yaml  deploy.sh
deploy/agentcore_twilio_function/twilio_function/: README.md  deploy.sh  package.json
deploy/agentcore_twilio_function/twilio_function/functions/: handler.js
deploy/bedrock_aws_fargate/: Dockerfile  README.md  bedrock_server.py  build-wheels.sh  cloudformation.yaml  requirements.txt
deploy/strands_aws_fargate/: .dockerignore  Dockerfile  README.md  build-wheels.sh  cloudformation.yaml  requirements.txt  strands_server.py
deploy/twilio_function/agentcore/: .env.example  README.md  deploy.sh
deploy/twilio_function/agentcore/functions/: handler.js
deploy/twilio_function/bedrock/: .env.example  .gitignore  README.md  deploy.sh  package.json
deploy/twilio_function/bedrock/functions/: handler.js
getting_started/: README.md
getting_started/examples/: .env.example  README.md  bedrock_agentcore_agents.py  bedrock_agents.py  strands_agents.py
getting_started/examples/fastapi/: bedrock.py  bedrock_agentcore.py  strands_agents.py
src/tac_aws/: __init__.py  _version.py
src/tac_aws/adapters/: __init__.py  agentcore_adapter.py  base.py  bedrock_adapter.py  strands_adapter.py
src/tac_aws/connectors/: __init__.py  bedrock_agentcore_connector.py  bedrock_connector.py  strands_connector.py
src/tac_aws/connectors/bedrock_agentcore/: __init__.py  config.py  connector.py  http.py  lambda_proxy.py  tac_app.py  validation.py  websocket.py  websocket_adapter.py
src/tac_aws/handlers/: __init__.py  omni.py
src/tac_aws/proxy/: __init__.py  agentcore_lambda.py  validation.py
src/tac_aws/server/: __init__.py  agentcore_app.py  fastapi_server.py  middleware.py
src/tac_aws/servers/: __init__.py  fastapi.py
src/tac_aws/tools/: __init__.py
src/tac_aws/tools/strands/: __init__.py  memory.py
tests/: __init__.py  conftest.py  test_agentcore_lambda.py  test_bedrock_agentcore_connector.py  test_bedrock_connector.py  test_memory_tool.py  test_package.py  test_strands_connector.py  test_validation.py
