[project]
name = "twilio-agent-connect-aws"
version = "1.0.0"
description = "AWS integrations for Twilio Agent Connect (TAC) - adapters and servers for AWS agent runtimes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Twilio", email = "help@twilio.com" }
]
keywords = ["twilio", "agent", "aws", "bedrock", "strands", "conversational-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core TAC from PyPI
    "twilio-agent-connect>=1.0.0,<2",
]

[project.optional-dependencies]
# FastAPI-based TAC Server (uses TAC core's server extras)
server = [
    "twilio-agent-connect[server]>=1.0.0,<2",
]

# AWS Strands SDK connector
strands = [
    "strands-agents>=1.30.0",
]

# AWS Bedrock Agent connector
bedrock = [
    "boto3>=1.34.0,<2",
    "mypy-boto3-bedrock-agent-runtime>=1.42.0",
]

# AWS Bedrock Agent Core connector
agentcore = [
    "bedrock-agentcore>=1.4.0",
    "boto3>=1.34.0,<2",
    "mypy-boto3-bedrock-agentcore>=1.42.0",
    "websockets>=13.0,<14",
]

# Development dependencies (includes all runtime features and AWS SDKs)
dev = [
    # AWS SDK dependencies
    "strands-agents>=1.30.0",
    "bedrock-agentcore>=1.4.0",
    "boto3>=1.34.0,<2",
    "websockets>=13.0,<14",
    # Server dependencies (via TAC core)
    "twilio-agent-connect[server]>=1.0.0,<2",
    # Dev tools
    "pytest>=7.0.0,<8",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.8.0,<1",
    "mypy>=1.0.0,<2",
    "mypy-boto3-bedrock-agent-runtime>=1.42.0",
    "mypy-boto3-bedrock-agentcore>=1.42.0",
]

[project.urls]
Homepage = "https://github.com/twilio/aws-twilio-agent-connect-python"
Documentation = "https://github.com/twilio/aws-twilio-agent-connect-python#readme"
Repository = "https://github.com/twilio/aws-twilio-agent-connect-python"
Issues = "https://github.com/twilio/aws-twilio-agent-connect-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tac_aws"]
exclude = [
    "/.github",
    "/.venv",
    "/tests",
    "/deploy",
    "/getting_started",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.venv",
    "/tests",
    "/deploy",
    "/getting_started",
    "/.gitignore",
    "/.pre-commit-config.yaml",
    "/Makefile",
    "/CLAUDE.md",
    "/pytest.ini",
    "/uv.lock",
    "*.pyc",
    "__pycache__",
    ".DS_Store",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["tac_aws"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = "strands.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_bedrock_agent_runtime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as an asyncio test",
]

[tool.coverage.run]
source = ["src/tac_aws"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

