[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.10.0",
    "botocore[crt] >= 1.35.0",
    "strands-agents >= 1.40.0",
    "twilio-agent-connect-aws >= 1.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
